removed xml warnings added style to text view

--- a/features/booking/src/main/res/layout/tourist_item.xml
+++ b/features/booking/src/main/res/layout/tourist_item.xml
@@ -9,11 +9,9 @@
 
     <TextView
         android:id="@+id/title_tourist"
+        style="@style/Theme.App.Base.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/sf_pro_display_regular"
-        android:text="Первый турист"
-        android:textColor="#000000"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -31,7 +29,7 @@
             android:id="@+id/arrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="TODO"
+            android:importantForAccessibility="no"
             android:src="@drawable/arrow_down_blue" />
     </LinearLayout>
 
@@ -52,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Имя"
+            android:hint="@string/name"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -73,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Фамилия"
+            android:hint="@string/surname"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -94,7 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Дата рождения"
+            android:hint="@string/birthdate"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -115,7 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Гражданство"
+            android:hint="@string/citizenship"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -136,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Номер загранпаспорта"
+            android:hint="@string/international_passport_number"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
@@ -157,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:backgroundTint="#F6F6F9"
-            android:hint="Срок действия загранпаспорта"
+            android:hint="@string/international_passport_validity"
             app:boxBackgroundColor="#F6F6F9"
             app:boxStrokeWidth="0dp"
             app:boxStrokeWidthFocused="0dp"
