--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <item name="colorControlActivated">#A9ABB7</item>
         <item name="colorControlHighlight">#A9ABB7</item>
     </style>
+    <style name="Theme.App.Base.TextView" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/sf_pro_display_regular</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
