--- a/features/room/src/main/res/layout/room_item.xml
+++ b/features/room/src/main/res/layout/room_item.xml
@@ -9,34 +9,12 @@
     android:paddingEnd="20dp"
     android:paddingBottom="12dp">
 
-    <ViewFlipper
-        android:id="@+id/view_flipper"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="244dp"
-        android:layout_marginTop="16dp"
-        android:autoStart="true"
-        android:flipInterval="2000"
-        android:inAnimation="@android:anim/slide_in_left"
-        android:outAnimation="@android:anim/slide_out_right"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:importantForAccessibility="no"
-            android:scaleType="fitXY"
-            android:src="@drawable/hotel_img_1" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:importantForAccessibility="no"
-            android:scaleType="fitXY"
-            android:src="@drawable/hotel_img_1" />
-    </ViewFlipper>
+        android:layout_height="257dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/name"
@@ -47,7 +25,7 @@
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/view_flipper" />
+        app:layout_constraintTop_toBottomOf="@id/view_pager" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
